Renamed dnd5e to sw5e

--- a/less/actors.less
+++ b/less/actors.less
@@ -2,7 +2,7 @@
 
 @actorNameHeight: 60px;
 
-.dnd5e.sheet.actor {
+.me5e.sheet.actor {
 
     /* ----------------------------------------- */
     /*  Sheet Header                             */
