--- a/less/chat.less
+++ b/less/chat.less
@@ -4,7 +4,7 @@
 /*  Chat Cards
 /* ----------------------------------------- */
 
-.dnd5e.chat-card {
+.me5e.chat-card {
     font-style: normal;
     font-size: 12px;
 
