--- a/less/items.less
+++ b/less/items.less
@@ -1,6 +1,6 @@
 @import "./variables.less";
 
-.dnd5e.sheet.item {
+.me5e.sheet.item {
     min-height: 400px;
     max-height: 95%;
     min-width: 480px;
