--- a/templates/actors/npc-sheet.html
+++ b/templates/actors/npc-sheet.html
@@ -5,15 +5,15 @@
         <img class="profile" src="{{actor.img}}" title="{{actor.name}}" data-edit="img"/>
 
         <section class="header-details flexrow">
-            {{> "systems/dnd5e/templates/actors/parts/actor-warnings.html"}}
+            {{> "systems/me5e/templates/actors/parts/actor-warnings.html"}}
 
             <h1 class="charname">
-                <input name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'DND5E.Name' }}"/>
+                <input name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'ME5E.Name' }}"/>
             </h1>
 
             <aside class="header-exp flexcol">
                 <div class="cr">
-                    <label>{{ localize "DND5E.AbbreviationCR" }}</label>
+                    <label>{{ localize "ME5E.AbbreviationCR" }}</label>
                     <input name="data.details.cr" type="text" value="{{labels.cr}}" placeholder="1"/>
                 </div>
                 <div class="experience">
@@ -21,7 +21,7 @@
                 </div>
                 <div class="proficiency">
                     <span>
-                        {{ localize "DND5E.Proficiency" }} {{numberFormat data.attributes.prof decimals=0 sign=true}}
+                        {{ localize "ME5E.Proficiency" }} {{numberFormat data.attributes.prof decimals=0 sign=true}}
                     </span>
                 </div>
             </aside>
@@ -33,23 +33,23 @@
                 </li>
                 <li>
                     <input type="text" name="data.details.alignment" value="{{data.details.alignment}}"
-                           placeholder="{{ localize 'DND5E.Alignment' }}"/>
+                           placeholder="{{ localize 'ME5E.Alignment' }}"/>
                 </li>
                 <li class="creature-type">
                     <span title="{{labels.type}}">{{labels.type}}</span>
-                    <a class="config-button" data-action="type" title="{{localize 'DND5E.CreatureTypeConfig'}}"><i
+                    <a class="config-button" data-action="type" title="{{localize 'ME5E.CreatureTypeConfig'}}"><i
                             class="fas fa-cog"></i></a>
                 </li>
                 <li>
                     <input type="text" name="data.details.source" value="{{data.details.source}}"
-                           placeholder="{{ localize 'DND5E.Source' }}"/>
+                           placeholder="{{ localize 'ME5E.Source' }}"/>
                 </li>
             </ul>
 
             {{!-- Header Attributes --}}
             <ul class="attributes flexrow">
                 <li class="attribute health">
-                    <h4 class="attribute-name box-title rollable">{{ localize "DND5E.HitPoints" }}</h4>
+                    <h4 class="attribute-name box-title rollable">{{ localize "ME5E.HitPoints" }}</h4>
                     <div class="attribute-value multiple">
                         <input name="data.attributes.hp.value" type="text" value="{{data.attributes.hp.value}}"
                                placeholder="10" data-dtype="Number"/>
@@ -59,15 +59,15 @@
                     </div>
                     <footer class="attribute-footer">
                         <input name="data.attributes.hp.formula" class="hpformula" type="text"
-                               placeholder="{{ localize 'DND5E.HPFormula' }}"
+                               placeholder="{{ localize 'ME5E.HPFormula' }}"
                                value="{{data.attributes.hp.formula}}"/>
                     </footer>
                 </li>
 
                 <li class="attribute armor">
                     <h4 class="attribute-name box-title">
-                        {{ localize "DND5E.ArmorClass" }}
-                        <a class="config-button" data-action="armor" title="{{localize 'DND5E.ArmorConfig'}}"><i
+                        {{ localize "ME5E.ArmorClass" }}
+                        <a class="config-button" data-action="armor" title="{{localize 'ME5E.ArmorConfig'}}"><i
                                 class="fas fa-cog"></i></a>
                     </h4>
                     <div class="attribute-value attributable" data-property="attributes.ac">
@@ -80,8 +80,8 @@
 
                 <li class="attribute movement">
                     <h4 class="attribute-name box-title">
-                        {{ localize "DND5E.Movement" }}
-                        <a class="config-button" data-action="movement" title="{{localize 'DND5E.MovementConfig'}}"><i
+                        {{ localize "ME5E.Movement" }}
+                        <a class="config-button" data-action="movement" title="{{localize 'ME5E.MovementConfig'}}"><i
                                 class="fas fa-cog"></i></a>
                     </h4>
                     <div class="attribute-value">
@@ -97,11 +97,11 @@
 
     {{!-- NPC Sheet Navigation --}}
     <nav class="sheet-navigation tabs" data-group="primary">
-        <a class="item active" data-tab="attributes">{{ localize "DND5E.Attributes" }}</a>
-        <a class="item" data-tab="features">{{ localize "DND5E.Features" }}</a>
-        <a class="item" data-tab="spellbook">{{ localize "DND5E.Spellbook" }}</a>
-        <a class="item" data-tab="effects">{{ localize "DND5E.Effects" }}</a>
-        <a class="item" data-tab="biography">{{ localize "DND5E.Biography" }}</a>
+        <a class="item active" data-tab="attributes">{{ localize "ME5E.Attributes" }}</a>
+        <a class="item" data-tab="features">{{ localize "ME5E.Features" }}</a>
+        <a class="item" data-tab="spellbook">{{ localize "ME5E.Spellbook" }}</a>
+        <a class="item" data-tab="effects">{{ localize "ME5E.Effects" }}</a>
+        <a class="item" data-tab="biography">{{ localize "ME5E.Biography" }}</a>
     </nav>
 
     {{!-- NPC Sheet Body --}}
@@ -116,11 +116,11 @@
                     <input class="ability-score" name="data.abilities.{{id}}.value" type="number"
                            value="{{ability.value}}" placeholder="10"/>
                     <div class="ability-modifiers flexrow">
-                        <span class="ability-mod" title="{{ localize 'DND5E.Modifier' }}">{{numberFormat ability.mod decimals=0 sign=true}}</span>
+                        <span class="ability-mod" title="{{ localize 'ME5E.Modifier' }}">{{numberFormat ability.mod decimals=0 sign=true}}</span>
                         <input type="hidden" name="data.abilities.{{id}}.proficient" value="{{ability.baseProf}}"
                                data-dtype="Number"/>
-                        <a class="proficiency-toggle ability-proficiency" title="{{ localize 'DND5E.Proficiency' }}">{{{ability.icon}}}</a>
-                        <span class="ability-save" title="{{ localize 'DND5E.SavingThrow' }}">{{numberFormat ability.save decimals=0 sign=true}}</span>
+                        <a class="proficiency-toggle ability-proficiency" title="{{ localize 'ME5E.Proficiency' }}">{{{ability.icon}}}</a>
+                        <span class="ability-save" title="{{ localize 'ME5E.SavingThrow' }}">{{numberFormat ability.save decimals=0 sign=true}}</span>
                     </div>
                 </li>
                 {{/each}}
@@ -148,7 +148,7 @@
                 {{!-- Legendary Actions --}}
                 <div class="counters">
                     <div class="counter flexrow legendary">
-                        <h4>{{ localize "DND5E.LegAct" }}</h4>
+                        <h4>{{ localize "ME5E.LegAct" }}</h4>
                         <div class="counter-value">
                             <input name="data.resources.legact.value" type="number"
                                    value="{{data.resources.legact.value}}" placeholder="0"/>
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                     <div class="counter flexrow legendary">
-                        <h4>{{ localize "DND5E.LegRes" }}</h4>
+                        <h4>{{ localize "ME5E.LegRes" }}</h4>
                         <div class="counter-value">
                             <input name="data.resources.legres.value" type="number"
                                    value="{{data.resources.legres.value}}" placeholder="0"/>
@@ -168,7 +168,7 @@
                         </div>
                     </div>
                     <div class="counter flexrow lair">
-                        <h4>{{ localize "DND5E.LairAct" }}</h4>
+                        <h4>{{ localize "ME5E.LairAct" }}</h4>
                         <div class="counter-value">
                             <input name="data.resources.lair.value" type="checkbox"
                                    value="{{data.resources.lair.value}}"
@@ -180,23 +180,23 @@
                 </div>
 
                 {{!-- Traits --}}
-                {{> "systems/dnd5e/templates/actors/parts/actor-traits.html"}}
+                {{> "systems/me5e/templates/actors/parts/actor-traits.html"}}
             </section>
         </div>
 
         {{!-- Features Tab --}}
         <div class="tab features flexcol" data-group="primary" data-tab="features">
-            {{> "systems/dnd5e/templates/actors/parts/actor-features.html" sections=features}}
+            {{> "systems/me5e/templates/actors/parts/actor-features.html" sections=features}}
         </div>
 
         {{!-- Spellbook Tab --}}
         <div class="tab spellbook flexcol" data-group="primary" data-tab="spellbook">
-            {{> "systems/dnd5e/templates/actors/parts/actor-spellbook.html"}}
+            {{> "systems/me5e/templates/actors/parts/actor-spellbook.html"}}
         </div>
 
         {{!-- Effects Tab --}}
         <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-            {{> "systems/dnd5e/templates/actors/parts/active-effects.html"}}
+            {{> "systems/me5e/templates/actors/parts/active-effects.html"}}
         </div>
 
         {{!-- Biography Tab --}}
