--- a/templates/apps/ability-use.html
+++ b/templates/apps/ability-use.html
@@ -7,7 +7,7 @@
 
     {{#if consumeSpellSlot}}
     <div class="form-group">
-        <label>{{ localize "DND5E.SpellCastUpcast" }}</label>
+        <label>{{ localize "ME5E.SpellCastUpcast" }}</label>
         <div class="form-fields">
             <select name="level">
                 {{#select item.data.level}}
@@ -21,14 +21,14 @@
     </div>
 
     <div class="form-group">
-        <label class="checkbox"><input type="checkbox" name="consumeSlot" checked/>{{ localize "DND5E.SpellCastConsume"
+        <label class="checkbox"><input type="checkbox" name="consumeSlot" checked/>{{ localize "ME5E.SpellCastConsume"
             }}</label>
     </div>
     {{/if}}
 
     {{#if consumeUses}}
     <div class="form-group">
-        <label class="checkbox"><input type="checkbox" name="consumeUse" checked/>{{ localize "DND5E.AbilityUseConsume"
+        <label class="checkbox"><input type="checkbox" name="consumeUse" checked/>{{ localize "ME5E.AbilityUseConsume"
             }}</label>
     </div>
     {{/if}}
@@ -36,14 +36,14 @@
     {{#if consumeResource}}
     <div class="form-group">
         <label class="checkbox"><input type="checkbox" name="consumeResource" checked/>{{ localize
-            "DND5E.ConsumeResource" }}</label>
+            "ME5E.ConsumeResource" }}</label>
     </div>
     {{/if}}
 
     {{#if consumeRecharge}}
     <div class="form-group">
         <label class="checkbox"><input type="checkbox" name="consumeRecharge" checked/>{{ localize
-            "DND5E.ConsumeRecharge" }}</label>
+            "ME5E.ConsumeRecharge" }}</label>
     </div>
     {{/if}}
 
@@ -51,7 +51,7 @@
     <div class="form-group">
         <label class="checkbox">
             <input type="checkbox" name="placeTemplate" checked/>
-            {{ localize "DND5E.PlaceTemplate" }}
+            {{ localize "ME5E.PlaceTemplate" }}
         </label>
     </div>
     {{/if}}
