--- a/templates/apps/actor-armor.html
+++ b/templates/apps/actor-armor.html
@@ -4,18 +4,18 @@
     </div>
 
     <div class="form-group select">
-        <label>{{localize "DND5E.ArmorClassCalculation"}}</label>
+        <label>{{localize "ME5E.ArmorClassCalculation"}}</label>
         <select name="ac.calc">
             {{selectOptions calculations selected=ac.calc labelAttr="label"}}
         </select>
     </div>
 
     <div class="form-group stacked">
-        <label>{{localize "DND5E.ArmorClassFormula"}}</label>
+        <label>{{localize "ME5E.ArmorClassFormula"}}</label>
         <input type="text" name="ac.formula" value="{{formula}}" {{#if formulaDisabled}}disabled{{/if}}>
     </div>
 
     <button type="submit" name="submit" value="1">
-        <i class="far fa-save"></i> {{ localize "DND5E.TraitSave" }}
+        <i class="far fa-save"></i> {{ localize "ME5E.TraitSave" }}
     </button>
 </form>
