--- a/templates/apps/hit-dice-config.html
+++ b/templates/apps/hit-dice-config.html
@@ -1,20 +1,20 @@
 <form autocomplete="off">
-    <p class="notes">{{ localize "DND5E.HitDiceConfigHint" }}</p>
+    <p class="notes">{{ localize "ME5E.HitDiceConfigHint" }}</p>
     {{#each classes}}
     <div class="form-group">
         <label>{{this.name}} ({{this.diceDenom}})</label>
         <div class="form-fields">
             <button class="decrement" type="button">-</button>
-            <input title="{{ localize 'DND5E.HitDiceRemaining' }}" class="current" name="{{this.classItemId}}"
+            <input title="{{ localize 'ME5E.HitDiceRemaining' }}" class="current" name="{{this.classItemId}}"
                    type="number" value="{{this.currentHitDice}}"/>
             <span class="sep">/</span>
-            <input title="{{ localize 'DND5E.HitDiceMax' }}" class="max" type="number" value="{{this.maxHitDice}}"
+            <input title="{{ localize 'ME5E.HitDiceMax' }}" class="max" type="number" value="{{this.maxHitDice}}"
                    disabled/>
             <button class="increment" type="button">+</button>
 
             <button class="roll-hd" data-hd-denom="{{this.diceDenom}}" {{#unless this.canRoll}}disabled{{
             /unless}}>
-            <i class="fas fa-dice-d20"></i> {{ localize "DND5E.Roll" }}
+            <i class="fas fa-dice-d20"></i> {{ localize "ME5E.Roll" }}
             </button>
         </div>
     </div>
