--- a/templates/apps/long-rest.html
+++ b/templates/apps/long-rest.html
@@ -1,11 +1,11 @@
 <form id="long-rest" class="dialog-content" onsubmit="event.preventDefault();">
-    <p>{{ localize "DND5E.LongRestHint" }}</p>
+    <p>{{ localize "ME5E.LongRestHint" }}</p>
 
     {{#if promptNewDay}}
     <div class="form-group">
-        <label>{{ localize "DND5E.NewDay" }}</label>
+        <label>{{ localize "ME5E.NewDay" }}</label>
         <input type="checkbox" name="newDay" {{checked newDay}}/>
-        <p class="hint">{{ localize "DND5E.NewDayHint" }}</p>
+        <p class="hint">{{ localize "ME5E.NewDayHint" }}</p>
     </div>
     {{/if}}
 
