--- a/templates/apps/trait-selector.html
+++ b/templates/apps/trait-selector.html
@@ -19,9 +19,9 @@
     {{> traitList}}
     {{#if allowCustom}}
     <div class="form-group stacked">
-        <label>{{ localize "DND5E.TraitSelectorSpecial" }}</label>
+        <label>{{ localize "ME5E.TraitSelectorSpecial" }}</label>
         <input type="text" name="custom" value="{{custom}}" data-dtype="String"/>
     </div>
     {{/if}}
-    <button type="submit" name="submit" value="1"><i class="far fa-save"></i> {{ localize "DND5E.TraitSave"}}</button>
+    <button type="submit" name="submit" value="1"><i class="far fa-save"></i> {{ localize "ME5E.TraitSave"}}</button>
 </form>
