--- a/templates/chat/roll-dialog.html
+++ b/templates/chat/roll-dialog.html
@@ -1,22 +1,22 @@
 <form>
     <div class="form-group">
-        <label>{{ localize "DND5E.Formula" }}</label>
+        <label>{{ localize "ME5E.Formula" }}</label>
         <input type="text" name="formula" value="{{formula}}" disabled/>
     </div>
     {{#if chooseModifier}}
     <div class="form-group">
-        <label>{{ localize "DND5E.AbilityModifier" }}</label>
+        <label>{{ localize "ME5E.AbilityModifier" }}</label>
         <select name="ability">
             {{selectOptions abilities selected=defaultAbility}}
         </select>
     </div>
     {{/if}}
     <div class="form-group">
-        <label>{{ localize "DND5E.RollSituationalBonus" }}</label>
-        <input type="text" name="bonus" value="" placeholder="{{ localize 'DND5E.RollExample' }}"/>
+        <label>{{ localize "ME5E.RollSituationalBonus" }}</label>
+        <input type="text" name="bonus" value="" placeholder="{{ localize 'ME5E.RollExample' }}"/>
     </div>
     <div class="form-group">
-        <label>{{ localize "DND5E.RollMode" }}</label>
+        <label>{{ localize "ME5E.RollMode" }}</label>
         <select name="rollMode">
             {{selectOptions rollModes selected=defaultRollMode localize=true}}
         </select>
