--- a/templates/items/backpack.html
+++ b/templates/items/backpack.html
@@ -6,7 +6,7 @@
 
         <div class="header-details flexrow">
             <h1 class="charname">
-                <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'DND5E.ItemName' }}"/>
+                <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'ME5E.ItemName' }}"/>
             </h1>
 
             <div class="item-subtitle">
@@ -22,7 +22,7 @@
                 </li>
                 <li>
                     <input type="text" name="data.source" value="{{data.source}}"
-                           placeholder="{{ localize 'DND5E.Source' }}"/>
+                           placeholder="{{ localize 'ME5E.Source' }}"/>
                 </li>
             </ul>
         </div>
@@ -30,22 +30,22 @@
 
     {{!-- Item Sheet Navigation --}}
     <nav class="sheet-navigation tabs" data-group="primary">
-        <a class="item active" data-tab="description">{{ localize "DND5E.Description" }}</a>
-        <a class="item" data-tab="details">{{ localize "DND5E.Details" }}</a>
+        <a class="item active" data-tab="description">{{ localize "ME5E.Description" }}</a>
+        <a class="item" data-tab="details">{{ localize "ME5E.Details" }}</a>
     </nav>
 
     {{!-- Item Sheet Body --}}
     <section class="sheet-body">
 
         {{!-- Description Tab --}}
-        {{> "systems/dnd5e/templates/items/parts/item-description.html"}}
+        {{> "systems/me5e/templates/items/parts/item-description.html"}}
 
         {{!-- Details Tab --}}
         <div class="tab details" data-group="primary" data-tab="details">
-            <h3 class="form-header">{{localize 'DND5E.ItemContainerDetails'}}</h3>
+            <h3 class="form-header">{{localize 'ME5E.ItemContainerDetails'}}</h3>
 
             <div class="form-group">
-                <label>{{localize 'DND5E.ItemContainerCapacity'}}</label>
+                <label>{{localize 'ME5E.ItemContainerCapacity'}}</label>
                 <div class="form-fields">
                     <input type="text" name="data.capacity.value" value="{{data.capacity.value}}"
                            data-dtype="Number" placeholder="-">
@@ -53,17 +53,17 @@
             </div>
 
             <div class="form-group">
-                <label>{{localize 'DND5E.ItemContainerCapacityType'}}</label>
+                <label>{{localize 'ME5E.ItemContainerCapacityType'}}</label>
                 <select name="data.capacity.type">
                     {{selectOptions config.itemCapacityTypes selected=data.capacity.type localize=true}}
                 </select>
             </div>
 
             <div class="form-group stacked">
-                <label>{{localize 'DND5E.ItemContainerProperties'}}</label>
+                <label>{{localize 'ME5E.ItemContainerProperties'}}</label>
                 <label class="checkbox">
                     <input type="checkbox" name="data.capacity.weightless" {{checked data.capacity.weightless}}>
-                    {{localize 'DND5E.ItemContainerWeightless'}}
+                    {{localize 'ME5E.ItemContainerWeightless'}}
                 </label>
             </div>
     </section>
