--- a/templates/items/class.html
+++ b/templates/items/class.html
@@ -6,7 +6,7 @@
 
         <div class="header-details flexrow">
             <h1 class="charname">
-                <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'DND5E.ClassName' }}"/>
+                <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'ME5E.ClassName' }}"/>
             </h1>
 
             <div class="item-subtitle">
@@ -17,7 +17,7 @@
             <ul class="summary flexrow">
                 <li>
                     <input type="text" name="data.source" value="{{data.source}}"
-                           placeholder="{{ localize 'DND5E.Source' }}"/>
+                           placeholder="{{ localize 'ME5E.Source' }}"/>
                 </li>
             </ul>
         </div>
@@ -25,8 +25,8 @@
 
     {{!-- Item Sheet Navigation --}}
     <nav class="sheet-navigation tabs" data-group="primary">
-        <a class="item active" data-tab="description">{{ localize "DND5E.Description" }}</a>
-        <a class="item" data-tab="details">{{ localize "DND5E.Details" }}</a>
+        <a class="item active" data-tab="description">{{ localize "ME5E.Description" }}</a>
+        <a class="item" data-tab="details">{{ localize "ME5E.Details" }}</a>
     </nav>
 
     {{!-- Item Sheet Body --}}
@@ -43,7 +43,7 @@
 
             {{!-- Class Levels --}}
             <div class="form-group">
-                <label>{{ localize "DND5E.ClassLevels" }}</label>
+                <label>{{ localize "ME5E.ClassLevels" }}</label>
                 <div class="form-fields">
                     <input type="text" name="data.levels" value="{{data.levels}}" data-dtype="Number"/>
                 </div>
@@ -51,7 +51,7 @@
 
             {{!-- Subclass Name --}}
             <div class="form-group">
-                <label>{{ localize "DND5E.SubclassName" }}</label>
+                <label>{{ localize "ME5E.SubclassName" }}</label>
                 <div class="form-fields">
                     <input type="text" name="data.subclass" value="{{data.subclass}}"/>
                 </div>
@@ -59,7 +59,7 @@
 
             {{!-- Class Hit Dice --}}
             <div class="form-group">
-                <label>{{localize "DND5E.HitDice"}}</label>
+                <label>{{localize "ME5E.HitDice"}}</label>
                 <div class="form-fields">
                     <select name="data.hitDice">
                         {{#select data.hitDice}}
@@ -72,7 +72,7 @@
             </div>
 
             <div class="form-group">
-                <label>{{localize "DND5E.HitDiceUsed"}}</label>
+                <label>{{localize "ME5E.HitDiceUsed"}}</label>
                 <div class="form-fields">
                     <input type="text" placeholder="0" name="data.hitDiceUsed" value="{{data.hitDiceUsed}}"
                            data-dtype="Number"/>
@@ -81,7 +81,7 @@
 
             {{!-- Spellcasting --}}
             <div class="form-group">
-                <label>{{localize 'DND5E.SpellProgression'}}</label>
+                <label>{{localize 'ME5E.SpellProgression'}}</label>
                 <div class="form-fields">
                     <select name="data.spellcasting.progression">
                         {{selectOptions config.spellProgression selected=data.spellcasting.progression localize=true}}
@@ -90,7 +90,7 @@
             </div>
 
             <div class="form-group">
-                <label>{{localize "DND5E.SpellAbility"}}</label>
+                <label>{{localize "ME5E.SpellAbility"}}</label>
                 <div class="form-fields">
                     <select name="data.spellcasting.ability">
                         {{selectOptions config.abilities selected=data.spellcasting.ability blank=""}}
@@ -101,7 +101,7 @@
             {{!-- Proficiencies --}}
             <div class="form-group">
                 <label>
-                    {{ localize "DND5E.ClassSaves" }}
+                    {{ localize "ME5E.ClassSaves" }}
                     {{#if editable}}
                     <a class="trait-selector class-saves" data-target="data.saves" data-options="saves">
                         <i class="fas fa-edit"></i>
@@ -119,7 +119,7 @@
 
             {{!-- Level 1 skills --}}
             <div class="form-group">
-                <label>{{localize "DND5E.ClassSkillsNumber"}}</label>
+                <label>{{localize "ME5E.ClassSkillsNumber"}}</label>
                 <div class="form-fields">
                     <input type="text" placeholder="0" name="data.skills.number" value="{{data.skills.number}}"
                            data-dtype="Number"/>
@@ -128,7 +128,7 @@
 
             <div class="form-group">
                 <label>
-                    {{localize "DND5E.ClassSkillsEligible"}}
+                    {{localize "ME5E.ClassSkillsEligible"}}
                     {{#if editable }}
                     <a class="trait-selector class-skills" data-target="data.skills.choices"
                        data-options="skills.choices">
@@ -147,7 +147,7 @@
 
             <div class="form-group">
                 <label>
-                    {{localize "DND5E.ClassSkillsChosen"}}
+                    {{localize "ME5E.ClassSkillsChosen"}}
                     {{#if editable }}
                     <a class="trait-selector class-skills" data-target="data.skills" data-options="skills">
                         <i class="fas fa-edit"></i>
