--- a/templates/items/equipment.html
+++ b/templates/items/equipment.html
@@ -6,7 +6,7 @@
 
         <div class="header-details flexrow">
             <h1 class="charname">
-                <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'DND5E.ItemName' }}"/>
+                <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'ME5E.ItemName' }}"/>
             </h1>
 
             <div class="item-subtitle">
@@ -25,7 +25,7 @@
                 </li>
                 <li>
                     <input type="text" name="data.source" value="{{data.source}}"
-                           placeholder="{{ localize 'DND5E.Source' }}"/>
+                           placeholder="{{ localize 'ME5E.Source' }}"/>
                 </li>
             </ul>
         </div>
@@ -33,24 +33,24 @@
 
     {{!-- Item Sheet Navigation --}}
     <nav class="sheet-navigation tabs" data-group="primary">
-        <a class="item active" data-tab="description">{{ localize "DND5E.Description" }}</a>
-        <a class="item" data-tab="details">{{ localize "DND5E.Details" }}</a>
-        <a class="item" data-tab="effects">{{ localize "DND5E.Effects" }}</a>
+        <a class="item active" data-tab="description">{{ localize "ME5E.Description" }}</a>
+        <a class="item" data-tab="details">{{ localize "ME5E.Details" }}</a>
+        <a class="item" data-tab="effects">{{ localize "ME5E.Effects" }}</a>
     </nav>
 
     {{!-- Item Sheet Body --}}
     <section class="sheet-body">
 
         {{!-- Description Tab --}}
-        {{> "systems/dnd5e/templates/items/parts/item-description.html"}}
+        {{> "systems/me5e/templates/items/parts/item-description.html"}}
 
         {{!-- Details Tab --}}
         <div class="tab details" data-group="primary" data-tab="details">
-            <h3 class="form-header">{{ localize "DND5E.ItemEquipmentDetails" }}</h3>
+            <h3 class="form-header">{{ localize "ME5E.ItemEquipmentDetails" }}</h3>
 
             {{!-- Equipment Type --}}
             <div class="form-group">
-                <label>{{ localize "DND5E.ItemEquipmentType" }}</label>
+                <label>{{ localize "ME5E.ItemEquipmentType" }}</label>
                 <select name="data.armor.type">
                     {{selectOptions config.equipmentTypes selected=data.armor.type blank=""}}
                 </select>
@@ -58,7 +58,7 @@
 
             {{#unless isMountable}}
             <div class="form-group">
-                <label>{{localize "DND5E.Attunement"}}</label>
+                <label>{{localize "ME5E.Attunement"}}</label>
                 <select name="data.attunement" data-dtype="Number">
                     {{selectOptions config.attunements selected=data.attunement localize=true}}
                 </select>
@@ -66,25 +66,25 @@
 
             {{!-- Equipment Status --}}
             <div class="form-group stacked">
-                <label>{{ localize "DND5E.ItemEquipmentStatus" }}</label>
+                <label>{{ localize "ME5E.ItemEquipmentStatus" }}</label>
                 <label class="checkbox">
                     <input type="checkbox" name="data.proficient" {{checked data.proficient}}/> {{ localize
-                    "DND5E.Proficient" }}
+                    "ME5E.Proficient" }}
                 </label>
                 <label class="checkbox">
-                    <input type="checkbox" name="data.equipped" {{checked data.equipped}}/> {{ localize "DND5E.Equipped"
+                    <input type="checkbox" name="data.equipped" {{checked data.equipped}}/> {{ localize "ME5E.Equipped"
                     }}
                 </label>
                 <label class="checkbox">
                     <input type="checkbox" name="data.identified" {{checked data.identified}}/> {{ localize
-                    "DND5E.Identified" }}
+                    "ME5E.Identified" }}
                 </label>
             </div>
             {{/unless}}
 
             {{!-- Armor Class --}}
             <div class="form-group">
-                <label>{{ localize "DND5E.ArmorClass" }}</label>
+                <label>{{ localize "ME5E.ArmorClass" }}</label>
                 <div class="form-fields">
                     <input type="text" name="data.armor.value" value="{{data.armor.value}}" data-dtype="Number"/>
                 </div>
@@ -93,57 +93,57 @@
             {{#unless isMountable}}
             {{!-- Dexterity Modifier --}}
             <div class="form-group">
-                <label>{{ localize "DND5E.ItemEquipmentDexMod" }}</label>
+                <label>{{ localize "ME5E.ItemEquipmentDexMod" }}</label>
                 <div class="form-fields">
                     <input type="text" name="data.armor.dex" value="{{data.armor.dex}}" data-dtype="Number"
-                           placeholder="{{ localize 'DND5E.Unlimited' }}"/>
+                           placeholder="{{ localize 'ME5E.Unlimited' }}"/>
                 </div>
             </div>
 
             {{!-- Required Strength --}}
             <div class="form-group">
-                <label>{{ localize "DND5E.ItemRequiredStr" }}</label>
+                <label>{{ localize "ME5E.ItemRequiredStr" }}</label>
                 <div class="form-fields">
                     <input type="text" name="data.strength" value="{{data.strength}}" data-dtype="Number"
-                           placeholder="{{ localize 'DND5E.None' }}"/>
+                           placeholder="{{ localize 'ME5E.None' }}"/>
                 </div>
             </div>
 
             {{!-- Stealth Disadvantage --}}
             <div class="form-group">
-                <label>{{ localize "DND5E.ItemEquipmentStealthDisav" }}</label>
+                <label>{{ localize "ME5E.ItemEquipmentStealthDisav" }}</label>
                 <input type="checkbox" name="data.stealth" value="1" {{checked data.stealth}}/>
             </div>
             {{/unless}}
 
             {{#if isMountable}}
-            {{> 'systems/dnd5e/templates/items/parts/item-mountable.html'}}
+            {{> 'systems/me5e/templates/items/parts/item-mountable.html'}}
             <div class="form-group">
-                <label>{{localize 'DND5E.Speed'}}</label>
+                <label>{{localize 'ME5E.Speed'}}</label>
                 <div class="form-fields">
                     <input type="text" name="data.speed.value" value="{{data.speed.value}}"
                            placeholder="0" data-dtype="Number">
-                    <span class="sep">{{localize 'DND5E.FeetAbbr'}}</span>
+                    <span class="sep">{{localize 'ME5E.FeetAbbr'}}</span>
                     <input type="text" name="data.speed.conditions"
                            value="{{data.speed.conditions}}">
                 </div>
             </div>
             {{/if}}
 
-            <h3 class="form-header">{{ localize "DND5E.ItemEquipmentUsage" }}</h3>
+            <h3 class="form-header">{{ localize "ME5E.ItemEquipmentUsage" }}</h3>
 
             {{!-- Item Activation Template --}}
-            {{> "systems/dnd5e/templates/items/parts/item-activation.html"}}
+            {{> "systems/me5e/templates/items/parts/item-activation.html"}}
 
-            <h3 class="form-header">{{ localize "DND5E.ItemEquipmentAction" }}</h3>
+            <h3 class="form-header">{{ localize "ME5E.ItemEquipmentAction" }}</h3>
 
             {{!-- Item Action Template --}}
-            {{> "systems/dnd5e/templates/items/parts/item-action.html"}}
+            {{> "systems/me5e/templates/items/parts/item-action.html"}}
         </div>
 
         {{!-- Effects Tab --}}
         <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-            {{> "systems/dnd5e/templates/actors/parts/active-effects.html"}}
+            {{> "systems/me5e/templates/actors/parts/active-effects.html"}}
         </div>
     </section>
 </form>
