--- a/templates/items/feat.html
+++ b/templates/items/feat.html
@@ -6,7 +6,7 @@
 
         <div class="header-details flexrow">
             <h1 class="charname">
-                <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'DND5E.ItemName' }}"/>
+                <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'ME5E.ItemName' }}"/>
             </h1>
 
             <div class="item-subtitle">
@@ -20,11 +20,11 @@
                 </li>
                 <li>
                     <input type="text" name="data.requirements" value="{{data.requirements}}"
-                           placeholder="{{ localize 'DND5E.Requirements' }}"/>
+                           placeholder="{{ localize 'ME5E.Requirements' }}"/>
                 </li>
                 <li>
                     <input type="text" name="data.source" value="{{data.source}}"
-                           placeholder="{{ localize 'DND5E.Source' }}"/>
+                           placeholder="{{ localize 'ME5E.Source' }}"/>
                 </li>
             </ul>
         </div>
@@ -32,50 +32,50 @@
 
     {{!-- Item Sheet Navigation --}}
     <nav class="sheet-navigation tabs" data-group="primary">
-        <a class="item active" data-tab="description">{{ localize "DND5E.Description" }}</a>
-        <a class="item" data-tab="details">{{ localize "DND5E.Details" }}</a>
-        <a class="item" data-tab="effects">{{ localize "DND5E.Effects" }}</a>
+        <a class="item active" data-tab="description">{{ localize "ME5E.Description" }}</a>
+        <a class="item" data-tab="details">{{ localize "ME5E.Details" }}</a>
+        <a class="item" data-tab="effects">{{ localize "ME5E.Effects" }}</a>
     </nav>
 
     {{!-- Item Sheet Body --}}
     <section class="sheet-body">
 
         {{!-- Description Tab --}}
-        {{> "systems/dnd5e/templates/items/parts/item-description.html"}}
+        {{> "systems/me5e/templates/items/parts/item-description.html"}}
 
         {{!-- Details Tab --}}
         <div class="tab details" data-group="primary" data-tab="details">
 
-            <h3 class="form-header">{{ localize "DND5E.FeatureUsage" }}</h3>
+            <h3 class="form-header">{{ localize "ME5E.FeatureUsage" }}</h3>
 
             {{!-- Item Activation Template --}}
-            {{> "systems/dnd5e/templates/items/parts/item-activation.html"}}
+            {{> "systems/me5e/templates/items/parts/item-activation.html"}}
 
             {{!-- Recharge Requirement --}}
             {{#if data.activation.type}}
             <div class="form-group recharge">
-                <label>{{ localize "DND5E.FeatureActionRecharge" }}</label>
+                <label>{{ localize "ME5E.FeatureActionRecharge" }}</label>
                 <div class="form-fields">
-                    <span>{{ localize "DND5E.FeatureRechargeOn" }}</span>
+                    <span>{{ localize "ME5E.FeatureRechargeOn" }}</span>
                     <input type="text" name="data.recharge.value" value="{{data.recharge.value}}"
-                           data-dtype="Number" placeholder="{{ localize 'DND5E.FeatureRechargeResult' }}"/>
+                           data-dtype="Number" placeholder="{{ localize 'ME5E.FeatureRechargeResult' }}"/>
                     <label class="checkbox">
-                        {{ localize "DND5E.Charged" }}
+                        {{ localize "ME5E.Charged" }}
                         <input type="checkbox" name="data.recharge.charged" {{checked data.recharge.charged}}/>
                     </label>
                 </div>
             </div>
             {{/if}}
 
-            <h3 class="form-header">{{ localize "DND5E.FeatureAttack" }}</h3>
+            <h3 class="form-header">{{ localize "ME5E.FeatureAttack" }}</h3>
 
             {{!-- Item Action Template --}}
-            {{> "systems/dnd5e/templates/items/parts/item-action.html"}}
+            {{> "systems/me5e/templates/items/parts/item-action.html"}}
         </div>
 
         {{!-- Effects Tab --}}
         <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-            {{> "systems/dnd5e/templates/actors/parts/active-effects.html"}}
+            {{> "systems/me5e/templates/actors/parts/active-effects.html"}}
         </div>
     </section>
 </form>
