--- a/templates/items/parts/item-action.html
+++ b/templates/items/parts/item-action.html
@@ -1,6 +1,6 @@
 {{!-- Action Type --}}
 <div class="form-group select">
-    <label>{{ localize "DND5E.ItemActionType" }}</label>
+    <label>{{ localize "ME5E.ItemActionType" }}</label>
     <select name="data.actionType">
         {{#select data.actionType}}
         <option value=""></option>
@@ -14,10 +14,10 @@
 
 {{!-- Ability Modifier --}}
 <div class="form-group select">
-    <label>{{ localize "DND5E.AbilityModifier" }}</label>
+    <label>{{ localize "ME5E.AbilityModifier" }}</label>
     <select name="data.ability">
         {{#select data.ability}}
-        <option value="">{{ localize "DND5E.Default" }}</option>
+        <option value="">{{ localize "ME5E.Default" }}</option>
         {{#each config.abilities as |ability a|}}
         <option value="{{a}}">{{ability}}</option>
         {{/each}}
@@ -28,7 +28,7 @@
 {{!-- Attack Roll Bonus --}}
 {{#if hasAttackRoll }}
 <div class="form-group">
-    <label>{{ localize "DND5E.ItemAttackBonus" }}</label>
+    <label>{{ localize "ME5E.ItemAttackBonus" }}</label>
     <div class="form-fields">
         <input type="text" name="data.attackBonus" value="{{data.attackBonus}}"/>
     </div>
@@ -37,8 +37,8 @@
 
 {{!-- Damage Formula --}}
 <h4 class="damage-header">
-    {{#unless isHealing }}{{ localize "DND5E.Damage" }}{{ else }}{{ localize "DND5E.Healing" }}{{/unless}} {{ localize
-    "DND5E.Formula" }}
+    {{#unless isHealing }}{{ localize "ME5E.Damage" }}{{ else }}{{ localize "ME5E.Healing" }}{{/unless}} {{ localize
+    "ME5E.Formula" }}
     <a class="damage-control add-damage"><i class="fas fa-plus"></i></a>
 </h4>
 <ol class="damage-parts form-group">
@@ -47,7 +47,7 @@
         <input type="text" name="data.damage.parts.{{i}}.0" value="{{lookup this " 0"}}"/>
         <select name="data.damage.parts.{{i}}.1">
             {{#select (lookup this "1") }}
-            <option value="">{{ localize "DND5E.None" }}</option>
+            <option value="">{{ localize "ME5E.None" }}</option>
             {{#each ../config.damageTypes as |name type|}}
             <option value="{{type}}">{{name}}</option>
             {{/each}}
@@ -64,25 +64,25 @@
 {{!-- Versatile Damage --}}
 {{#if data.damage.parts.length }}
 <div class="form-group">
-    <label>{{ localize "DND5E.VersatileDamage" }}</label>
+    <label>{{ localize "ME5E.VersatileDamage" }}</label>
     <div class="form-fields">
         <input type="text" name="data.damage.versatile" value="{{data.damage.versatile}}"
-               placeholder="{{ localize 'DND5E.Formula' }}"/>
+               placeholder="{{ localize 'ME5E.Formula' }}"/>
     </div>
 </div>
 {{/if}}
 
 {{!-- Other Formula --}}
 <div class="form-group">
-    <label>{{ localize "DND5E.OtherFormula" }}</label>
+    <label>{{ localize "ME5E.OtherFormula" }}</label>
     <div class="form-fields">
-        <input type="text" name="data.formula" value="{{data.formula}}" placeholder="{{ localize 'DND5E.Formula' }}"/>
+        <input type="text" name="data.formula" value="{{data.formula}}" placeholder="{{ localize 'ME5E.Formula' }}"/>
     </div>
 </div>
 
 {{!-- Saving Throw --}}
 <div class="form-group input-select">
-    <label>{{ localize "DND5E.ActionSave" }}</label>
+    <label>{{ localize "ME5E.ActionSave" }}</label>
     <div class="form-fields">
         <select name="data.save.ability">
             {{#select data.save.ability}}
@@ -92,16 +92,16 @@
             {{/each}}
             {{/select}}
         </select>
-        <span>{{ localize "DND5E.VsDC" }}</span>
+        <span>{{ localize "ME5E.VsDC" }}</span>
         <input type="text" name="data.save.dc" value="{{#if data.save.dc}}{{data.save.dc}}{{/if}}" data-dtype="Number"
-               placeholder="{{ localize 'DND5E.AbbreviationDC' }}" {{#unless isFlatDC}}disabled{{/unless}}/>
+               placeholder="{{ localize 'ME5E.AbbreviationDC' }}" {{#unless isFlatDC}}disabled{{/unless}}/>
         <select name="data.save.scaling">
             {{#select data.save.scaling}}
-            <option value="spell">{{ localize "DND5E.Spellcasting" }}</option>
+            <option value="spell">{{ localize "ME5E.Spellcasting" }}</option>
             {{#each config.abilities as |ability a|}}
             <option value="{{a}}">{{ability}}</option>
             {{/each}}
-            <option value="flat">{{ localize "DND5E.Flat" }}</option>
+            <option value="flat">{{ localize "ME5E.Flat" }}</option>
             {{/select}}
         </select>
     </div>
@@ -109,7 +109,7 @@
 
 {{!-- Chat Message Flavor --}}
 <div class="form-group stacked">
-    <label>{{ localize "DND5E.ChatFlavor" }}</label>
+    <label>{{ localize "ME5E.ChatFlavor" }}</label>
     <input type="text" name="data.chatFlavor" value="{{data.chatFlavor}}"/>
 </div>
 {{/if}}
