--- a/templates/items/parts/item-activation.html
+++ b/templates/items/parts/item-activation.html
@@ -1,6 +1,6 @@
 {{!-- Activation Cost --}}
 <div class="form-group input-select">
-    <label>{{ localize "DND5E.ItemActivationCost" }}</label>
+    <label>{{ localize "ME5E.ItemActivationCost" }}</label>
     <div class="form-fields">
         <input type="text" name="data.activation.cost" value="{{data.activation.cost}}" data-dtype="Number"
                placeholder="-"/>
@@ -18,7 +18,7 @@
 
 {{!-- Activation Condition --}}
 <div class="form-group">
-    <label>{{ localize "DND5E.ItemActivationCondition" }}</label>
+    <label>{{ localize "ME5E.ItemActivationCondition" }}</label>
     <div class="form-fields">
         <input type="text" name="data.activation.condition" value="{{data.activation.condition}}"/>
     </div>
@@ -26,7 +26,7 @@
 
 {{#if isCrewed}}
 <div class="form-group">
-    <label>{{localize 'DND5E.Cover'}}</label>
+    <label>{{localize 'ME5E.Cover'}}</label>
     <div class="form-fields">
         <select name="data.cover" data-dtype="Number">
             {{#select data.cover}}
@@ -42,7 +42,7 @@
 
 {{!-- Ability Target --}}
 <div class="form-group input-select-select">
-    <label>{{ localize "DND5E.Target" }}</label>
+    <label>{{ localize "ME5E.Target" }}</label>
     <div class="form-fields">
         <input type="text" name="data.target.value" value="{{data.target.value}}" data-dtype="Number" placeholder="-"/>
         <select name="data.target.units">
@@ -67,7 +67,7 @@
 {{!-- Ability Target Width --}}
 {{#if isLine}}
 <div class="form-group input-select-select">
-    <label>{{ localize "DND5E.TargetWidth" }}</label>
+    <label>{{ localize "ME5E.TargetWidth" }}</label>
     <div class="form-fields">
         <input type="text" name="data.target.width" value="{{data.target.width}}" data-dtype="Number" placeholder="-"/>
     </div>
@@ -76,13 +76,13 @@
 
 {{!-- Ability Range --}}
 <div class="form-group input-select">
-    <label>{{ localize "DND5E.Range" }}</label>
+    <label>{{ localize "ME5E.Range" }}</label>
     <div class="form-fields">
         <input type="text" name="data.range.value" value="{{data.range.value}}" data-dtype="Number"
-               placeholder="{{ localize 'DND5E.Normal' }}"/>
+               placeholder="{{ localize 'ME5E.Normal' }}"/>
         <span class="sep">/</span>
         <input type="text" name="data.range.long" value="{{data.range.long}}" data-dtype="Number"
-               placeholder="{{ localize 'DND5E.Max' }}"/>
+               placeholder="{{ localize 'ME5E.Max' }}"/>
         <select name="data.range.units">
             {{#select data.range.units}}
             <option value=""></option>
@@ -96,7 +96,7 @@
 
 {{!-- Effect Duration --}}
 <div class="form-group input-select">
-    <label>{{ localize "DND5E.Duration" }}</label>
+    <label>{{ localize "ME5E.Duration" }}</label>
     <div class="form-fields">
         <input type="text" name="data.duration.value" value="{{data.duration.value}}" data-dtype="Number"
                placeholder="-"/>
@@ -113,12 +113,12 @@
 
 {{!-- Limited Uses --}}
 <div class="form-group uses-per">
-    <label>{{ localize "DND5E.LimitedUses" }}</label>
+    <label>{{ localize "ME5E.LimitedUses" }}</label>
     <div class="form-fields">
         <input type="text" name="data.uses.value" value="{{data.uses.value}}" data-dtype="Number"/>
-        <span class="sep">{{ localize "DND5E.of" }}</span>
+        <span class="sep">{{ localize "ME5E.of" }}</span>
         <input type="text" name="data.uses.max" value="{{data.uses.max}}"/>
-        <span class="sep">{{ localize "DND5E.per" }}</span>
+        <span class="sep">{{ localize "ME5E.per" }}</span>
         <select name="data.uses.per">
             {{#select data.uses.per}}
             <option value=""></option>
@@ -132,7 +132,7 @@
 
 {{!-- Consumption --}}
 <div class="form-group uses-per">
-    <label>{{ localize "DND5E.ConsumeTitle" }}</label>
+    <label>{{ localize "ME5E.ConsumeTitle" }}</label>
     <div class="form-fields">
         <select name="data.consume.type">
             {{#select data.consume.type}}
