--- a/templates/actors/npc-sheet.html
+++ b/templates/actors/npc-sheet.html
@@ -47,7 +47,7 @@
             </ul>
 
             {{!-- Header Attributes --}}
-            <ul class="attributes flexrow">
+            <ul class="attributesBox flexrow">
                 <li class="attribute health">
                     <h4 class="attribute-name box-title rollable">{{ localize "ME5E.HitPoints" }}</h4>
                     <div class="attribute-value multiple">
