--- a/templates/items/class.html
+++ b/templates/items/class.html
@@ -80,14 +80,14 @@
             </div>
 
             {{!-- Spellcasting --}}
-            <div class="form-group">
-                <label>{{localize 'ME5E.SpellProgression'}}</label>
-                <div class="form-fields">
-                    <select name="data.spellcasting.progression">
-                        {{selectOptions config.spellProgression selected=data.spellcasting.progression localize=true}}
-                    </select>
-                </div>
-            </div>
+<!--            <div class="form-group">-->
+<!--                <label>{{localize 'ME5E.SpellProgression'}}</label>-->
+<!--                <div class="form-fields">-->
+<!--                    <select name="data.spellcasting.progression">-->
+
+<!--                    </select>-->
+<!--                </div>-->
+<!--            </div>-->
 
             <div class="form-group">
                 <label>{{localize "ME5E.SpellAbility"}}</label>
