--- a/less/variables.less
+++ b/less/variables.less
@@ -5,7 +5,7 @@
 /* ----------------------------------------- */
 /*  Fonts                                    */
 /* ----------------------------------------- */
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
 @font-face {
     font-family: 'Modesto Condensed';
     font-style: normal;
@@ -21,9 +21,9 @@
 }
 
 .modesto {
-    font-family: "Modesto Condensed", "Palatino Linotype", serif;
+  font-family: /*"Roboto",*/ "Modesto Condensed", "Palatino Linotype", serif;
     font-size: 20px;
-    font-weight: 700;
+  font-weight: 400;
 }
 
 /* ----------------------------------------- */
