--- a/templates/actors/vehicle-sheet.html
+++ b/templates/actors/vehicle-sheet.html
@@ -29,7 +29,7 @@
                            placeholder="{{localize 'ME5E.Source'}}">
                 </li>
             </ul>
-            <ul class="attributes flexrow">
+            <ul class="attributesBox flexrow">
                 <li class="attribute health">
                     <h4 class="attribute-name box-title">{{localize 'ME5E.HitPoints'}}</h4>
                     <div class="attribute-value multiple">
