--- a/templates/apps/short-rest.html
+++ b/templates/apps/short-rest.html
@@ -1,39 +1,38 @@
 <form id="short-rest-hd" class="dialog-content" onsubmit="event.preventDefault();">
     <p>{{ localize "ME5E.ShortRestHint" }}</p>
-    <div class="form-group">
-        <label>{{ localize "ME5E.ShortRestSelect" }}</label>
-        <div class="form-fields">
-            <select name="hd">
-                {{#select denomination}}
-                {{#each availableHD as |num denom|}}
+<div class="form-group">
+    <label>{{ localize "ME5E.ShortRestSelect" }}</label>
+<div class="form-fields">
+    <select name="hd">
+        {{#select denomination}}
+            {{#each availableHD as |num denom|}}
                 <option value="{{denom}}">{{denom}} ({{num}} {{ localize "ME5E.available" }})</option>
-                {{/each}}
-                {{/select}}
-            </select>
-            <button id="roll-hd" {{#unless canRoll}}disabled{{
-            /unless}}>
-            <i class="fas fa-dice-d20"></i> {{ localize "ME5E.Roll" }}
-            </button>
-        </div>
-        {{#unless canRoll}}
+            {{/each}}
+        {{/select}}
+    </select>
+        <button id="roll-hd" {{#unless canRoll}}disabled{{/unless}}>
+    <i class="fas fa-dice-d20"></i> {{ localize "ME5E.Roll" }}
+</button>
+</div>
+{{#unless canRoll}}
         <p class="notes">{{ localize "ME5E.ShortRestNoHD" }}</p>
-        {{/unless}}
-    </div>
+{{/unless}}
+</div>
 
-    {{#if promptNewDay}}
-    <div class="form-group">
-        <label>{{ localize "ME5E.NewDay" }}</label>
-        <input type="checkbox" name="newDay" {{checked newDay}}/>
-        <p class="hint">{{ localize "ME5E.NewDayHint" }}</p>
-    </div>
-    {{/if}}
+{{#if promptNewDay}}
+        <div class="form-group">
+            <label>{{ localize "ME5E.NewDay" }}</label>
+            <input type="checkbox" name="newDay" {{checked newDay}}/>
+            <p class="hint">{{ localize "ME5E.NewDayHint" }}</p>
+        </div>
+{{/if}}
 
     <div class="dialog-buttons">
         {{#each buttons as |button id|}}
-        <button class="dialog-button" data-button="{{id}}">
-            {{{button.icon}}}
-            {{{button.label}}}
-        </button>
+            <button class="dialog-button" data-button="{{id}}">
+                {{{button.icon}}}
+                {{{button.label}}}
+            </button>
         {{/each}}
     </div>
 </form>
