--- a/templates/actors/parts/active-effects.html
+++ b/templates/actors/parts/active-effects.html
@@ -3,11 +3,11 @@
 {{#unless section.hidden}}
     <li class="items-header flexrow" data-effect-type="{{section.type}}">
         <h3 class="item-name effect-name flexrow">{{localize section.label}}</h3>
-        <div class="effect-source">{{localize "DND5E.Source"}}</div>
-        <div class="effect-source">{{localize "DND5E.Duration"}}</div>
+        <div class="effect-source">{{localize "ME5E.Source"}}</div>
+        <div class="effect-source">{{localize "ME5E.Duration"}}</div>
         <div class="item-controls effect-controls flexrow">
-            <a class="effect-control" data-action="create" title="{{localize 'DND5E.EffectCreate'}}">
-                <i class="fas fa-plus"></i> {{localize "DND5E.Add"}}
+            <a class="effect-control" data-action="create" title="{{localize 'ME5E.EffectCreate'}}">
+                <i class="fas fa-plus"></i> {{localize "ME5E.Add"}}
             </a>
         </div>
     </li>
@@ -30,13 +30,13 @@
             <div class="effect-source">{{effect.sourceName}}</div>
             <div class="effect-duration">{{effect.duration.label}}</div>
             <div class="item-controls effect-controls flexrow">
-                <a class="effect-control" data-action="toggle" title="{{localize 'DND5E.EffectToggle'}}">
+                <a class="effect-control" data-action="toggle" title="{{localize 'ME5E.EffectToggle'}}">
                     <i class="fas {{#if effect.data.disabled}}fa-check{{else}}fa-times{{/if}}"></i>
                 </a>
-                <a class="effect-control" data-action="edit" title="{{localize 'DND5E.EffectEdit'}}">
+                <a class="effect-control" data-action="edit" title="{{localize 'ME5E.EffectEdit'}}">
                     <i class="fas fa-edit"></i>
                 </a>
-                <a class="effect-control" data-action="delete" title="{{localize 'DND5E.EffectDelete'}}">
+                <a class="effect-control" data-action="delete" title="{{localize 'ME5E.EffectDelete'}}">
                     <i class="fas fa-trash"></i>
                 </a>
             </div>
