--- a/templates/actors/vehicle-sheet.html
+++ b/templates/actors/vehicle-sheet.html
@@ -3,11 +3,11 @@
         <img class="profile" src="{{actor.img}}" title="{{actor.name}}" alt="{{actor.name}}"
              data-edit="img">
         <section class="header-details flexrow">
-            {{> "systems/dnd5e/templates/actors/parts/actor-warnings.html"}}
+            {{> "systems/me5e/templates/actors/parts/actor-warnings.html"}}
 
             <h1 class="charname">
                 <input name="name" type="text" value="{{actor.name}}"
-                       placeholder="{{localize 'DND5E.Name'}}">
+                       placeholder="{{localize 'ME5E.Name'}}">
             </h1>
             <ul class="summary flexrow">
                 <li>
@@ -21,17 +21,17 @@
                 <li>
                     <input type="text" name="data.traits.dimensions"
                            value="{{data.traits.dimensions}}"
-                           placeholder="{{localize 'DND5E.Dimensions'}}">
+                           placeholder="{{localize 'ME5E.Dimensions'}}">
                 </li>
                 <li>
                     <input type="text" name="data.details.source"
                            value="{{data.details.source}}"
-                           placeholder="{{localize 'DND5E.Source'}}">
+                           placeholder="{{localize 'ME5E.Source'}}">
                 </li>
             </ul>
             <ul class="attributes flexrow">
                 <li class="attribute health">
-                    <h4 class="attribute-name box-title">{{localize 'DND5E.HitPoints'}}</h4>
+                    <h4 class="attribute-name box-title">{{localize 'ME5E.HitPoints'}}</h4>
                     <div class="attribute-value multiple">
                         <input name="data.attributes.hp.value" type="text" placeholder="&mdash;"
                                value="{{data.attributes.hp.value}}" data-dtype="Number">
@@ -41,15 +41,15 @@
                     </div>
                     <footer class="attribute-footer">
                         <input name="data.attributes.hp.dt" type="text" class="temphp"
-                               placeholder="{{localize 'DND5E.Threshold'}}"
+                               placeholder="{{localize 'ME5E.Threshold'}}"
                                value="{{data.attributes.hp.dt}}" data-dtype="Number">
                         <input name="data.attributes.hp.mt" type="text" class="temphp"
-                               placeholder="{{localize 'DND5E.VehicleMishap'}}"
+                               placeholder="{{localize 'ME5E.VehicleMishap'}}"
                                value="{{data.attributes.hp.mt}}" data-dtype="Number">
                     </footer>
                 </li>
                 <li class="attribute">
-                    <h4 class="attribute-name box-title">{{localize 'DND5E.ArmorClass'}}</h4>
+                    <h4 class="attribute-name box-title">{{localize 'ME5E.ArmorClass'}}</h4>
                     <div class="attribute-value">
                         <input name="data.attributes.ac.flat" type="text" placeholder="&mdash;"
                                value="{{data.attributes.ac.flat}}" data-dtype="Number">
@@ -61,8 +61,8 @@
                 </li>
                 <li class="attribute movement">
                     <h4 class="attribute-name box-title">
-                        {{ localize "DND5E.Movement" }}
-                        <a class="config-button" data-action="movement" title="{{localize 'DND5E.MovementConfig'}}"><i class="fas fa-cog"></i></a>
+                        {{ localize "ME5E.Movement" }}
+                        <a class="config-button" data-action="movement" title="{{localize 'ME5E.MovementConfig'}}"><i class="fas fa-cog"></i></a>
                     </h4>
                     <div class="attribute-value">
                         <span>{{movement.primary}}</span>
@@ -76,11 +76,11 @@
     </header>
 
     <nav class="sheet-navigation tabs" data-group="primary">
-        <a class="item active" data-tab="attributes">{{localize 'DND5E.Attributes'}}</a>
-        <a class="item" data-tab="features">{{localize 'DND5E.Features'}}</a>
-        <a class="item" data-tab="cargo">{{localize 'DND5E.VehicleCargoCrew'}}</a>
-        <a class="item" data-tab="effects">{{ localize "DND5E.Effects" }}</a>
-        <a class="item" data-tab="biography">{{localize 'DND5E.Description'}}</a>
+        <a class="item active" data-tab="attributes">{{localize 'ME5E.Attributes'}}</a>
+        <a class="item" data-tab="features">{{localize 'ME5E.Features'}}</a>
+        <a class="item" data-tab="cargo">{{localize 'ME5E.VehicleCargoCrew'}}</a>
+        <a class="item" data-tab="effects">{{ localize "ME5E.Effects" }}</a>
+        <a class="item" data-tab="biography">{{localize 'ME5E.Description'}}</a>
     </nav>
 
     <section class="sheet-body">
@@ -92,7 +92,7 @@
                     <input class="ability-score" name="data.abilities.{{id}}.value" type="text"
                            value="{{ability.value}}" data-dtype="Number" placeholder="0">
                     <div class="ability-modifiers flexrow">
-                        <span class="ability-mod" title="{{localize 'DND5E.Modifier'}}">
+                        <span class="ability-mod" title="{{localize 'ME5E.Modifier'}}">
                             {{numberFormat ability.mod decimals=0 sign=true}}
                         </span>
                     </div>
@@ -102,7 +102,7 @@
             <section class="center-pane flexcol">
                 <div class="counters">
                     <div class="counter flexrow creature-cap">
-                        <h4>{{localize 'DND5E.VehicleCreatureCapacity'}}</h4>
+                        <h4>{{localize 'ME5E.VehicleCreatureCapacity'}}</h4>
                         <div class="counter-value">
                             <input type="text" placeholder="&mdash;"
                                    name="data.attributes.capacity.creature"
@@ -110,14 +110,14 @@
                         </div>
                     </div>
                     <div class="counter flexrow cargo-cap">
-                        <h4>{{localize 'DND5E.VehicleCargoCapacity'}}</h4>
+                        <h4>{{localize 'ME5E.VehicleCargoCapacity'}}</h4>
                         <div class="counter-value">
                             <input type="text" name="data.attributes.capacity.cargo" placeholder="0"
                                    data-dtype="Number" value="{{data.attributes.capacity.cargo}}">
                         </div>
                     </div>
                     <div class="counter flexrow stations">
-                        <h4>{{localize 'DND5E.VehicleActionStations'}}</h4>
+                        <h4>{{localize 'ME5E.VehicleActionStations'}}</h4>
                         <div class="counter-value">
                             <input name="data.attributes.actions.stations" type="checkbox"
                                    data-dtype="Boolean" value="{{data.attributes.actions.stations}}"
@@ -125,14 +125,14 @@
                         </div>
                     </div>
                     <div class="counter flexrow actions">
-                        <h4>{{localize 'DND5E.ActionPl'}}</h4>
+                        <h4>{{localize 'ME5E.ActionPl'}}</h4>
                         <div class="counter-value">
                             <input type="text" name="data.attributes.actions.value" placeholder="0"
                                    data-dtype="Number" value="{{data.attributes.actions.value}}">
                         </div>
                     </div>
                     <div class="counter flexrow action-thresholds">
-                        <h4>{{localize 'DND5E.VehicleActionThresholds'}}</h4>
+                        <h4>{{localize 'ME5E.VehicleActionThresholds'}}</h4>
                         <div class="counter-value">
                             <span class="sep">&lt;</span>
                             <input type="text" placeholder="&mdash;" data-dtype="Number"
@@ -149,19 +149,19 @@
                         </div>
                     </div>
                 </div>
-                {{> 'systems/dnd5e/templates/actors/parts/actor-traits.html'}}
+                {{> 'systems/me5e/templates/actors/parts/actor-traits.html'}}
             </section>
         </div>
 
         <div class="tab features flexcol" data-group="primary" data-tab="features">
-            {{> 'systems/dnd5e/templates/actors/parts/actor-features.html' sections=features}}
+            {{> 'systems/me5e/templates/actors/parts/actor-features.html' sections=features}}
         </div>
 
         <div class="tab cargo flexcol" data-group="primary" data-tab="cargo">
-            {{> 'systems/dnd5e/templates/actors/parts/actor-inventory.html' sections=cargo}}
+            {{> 'systems/me5e/templates/actors/parts/actor-inventory.html' sections=cargo}}
         </div>
         <div class="tab effects flexcol" data-group="primary" data-tab="effects">
-            {{> "systems/dnd5e/templates/actors/parts/active-effects.html"}}
+            {{> "systems/me5e/templates/actors/parts/active-effects.html"}}
         </div>
         <div class="tab biography flexcol" data-group="primary" data-tab="biography">
             {{editor content=data.details.biography.value target='data.details.biography.value'
