--- a/templates/items/tool.html
+++ b/templates/items/tool.html
@@ -6,7 +6,7 @@
 
         <div class="header-details flexrow">
             <h1 class="charname">
-                <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'DND5E.ItemName' }}"/>
+                <input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'ME5E.ItemName' }}"/>
             </h1>
 
             <div class="item-subtitle">
@@ -21,7 +21,7 @@
                     </select>
                 </li>
                 <li>
-                    <input type="text" name="data.source" value="{{data.source}}" placeholder="{{ localize 'DND5E.Source' }}"/>
+                    <input type="text" name="data.source" value="{{data.source}}" placeholder="{{ localize 'ME5E.Source' }}"/>
                 </li>
             </ul>
         </div>
@@ -29,29 +29,29 @@
 
     {{!-- Item Sheet Navigation --}}
     <nav class="sheet-navigation tabs" data-group="primary">
-        <a class="item active" data-tab="description">{{ localize "DND5E.Description" }}</a>
-        <a class="item" data-tab="details">{{ localize "DND5E.Details" }}</a>
+        <a class="item active" data-tab="description">{{ localize "ME5E.Description" }}</a>
+        <a class="item" data-tab="details">{{ localize "ME5E.Details" }}</a>
     </nav>
 
     {{!-- Item Sheet Body --}}
     <section class="sheet-body">
 
         {{!-- Description Tab --}}
-        {{> "systems/dnd5e/templates/items/parts/item-description.html"}}
+        {{> "systems/me5e/templates/items/parts/item-description.html"}}
 
         {{!-- Details Tab --}}
         <div class="tab details" data-group="primary" data-tab="details">
 
             {{!-- Tool Type --}}
             <div class="form-group">
-                <label>{{ localize "DND5E.ItemToolType" }}</label>
+                <label>{{ localize "ME5E.ItemToolType" }}</label>
                 <select name="data.toolType">
                     {{selectOptions config.toolTypes selected=data.toolType blank=""}}
                 </select>
             </div>
 
             <div class="form-group">
-                <label>{{ localize "DND5E.ItemToolBase" }}</label>
+                <label>{{ localize "ME5E.ItemToolBase" }}</label>
                 <select name="data.baseItem">
                     {{selectOptions baseItems selected=data.baseItem blank=""}}
                 </select>
@@ -59,7 +59,7 @@
 
             {{!-- Tool Proficiency --}}
             <div class="form-group">
-                <label>{{ localize "DND5E.ItemToolProficiency" }}</label>
+                <label>{{ localize "ME5E.ItemToolProficiency" }}</label>
                  <select name="data.proficient" data-dtype="Number">
                      {{selectOptions config.proficiencyLevels selected=data.proficient}}
                  </select>
@@ -67,7 +67,7 @@
 
             {{!-- Ability Check --}}
             <div class="form-group">
-                <label>{{ localize "DND5E.DefaultAbilityCheck" }}</label>
+                <label>{{ localize "ME5E.DefaultAbilityCheck" }}</label>
                 <select name="data.ability">
                     {{selectOptions config.abilities selected=data.ability}}
                 </select>
@@ -75,13 +75,13 @@
 
             {{!-- Tool Bonus --}}
             <div class="form-group">
-                <label>{{ localize "DND5E.ItemToolBonus" }}</label>
+                <label>{{ localize "ME5E.ItemToolBonus" }}</label>
                 <input type="text" name="data.bonus" value="{{data.bonus}}"/>
             </div>
 
             {{!-- Chat Message Flavor --}}
             <div class="form-group stacked">
-                <label>{{ localize "DND5E.ChatFlavor" }}</label>
+                <label>{{ localize "ME5E.ChatFlavor" }}</label>
                 <input type="text" name="data.chatFlavor" value="{{data.chatFlavor}}"/>
             </div>
         </div>
